# polymarket-hawkes

./: .env.template  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: categories.yaml  credentials.yaml.template  focal.yaml  paths.yaml
scripts/: 01_discover_universe.py  02_pull_trades.py  03_resample_trades.py  04_pull_gdelt_corpus.py  05_pull_category_feeds.py  06_embed_corpus.py
src/matching/: __init__.py  embedder.py  faiss_index.py
src/news/: article_fetcher.py  normalizer.py
src/news/feeds/: __init__.py  espn.py  nba_stats.py  rss.py
src/news/gdelt/: __init__.py  bigquery.py
src/polymarket/: __init__.py  gamma.py  goldsky.py  resampler.py  trades.py
src/schemas/: __init__.py  analysis_tuple.py  article.py  market.py  news_event.py  trade.py
src/utils/: __init__.py  cache.py  duckdb_io.py  logging.py  rate_limiter.py
tests/: test_embedder.py  test_feeds.py  test_gamma.py  test_gdelt.py  test_goldsky.py  test_normalizer.py  test_resampler.py  test_schemas.py  test_utils.py
